syntax = "proto3";
package sayhello;

import "google/api/annotations.proto";


message HelloRequest {
  string name = 1;

}
message HelloResponse {
  string message = 1;

}


service SayHello {
    rpc Polite(HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
          post: "/v1/example/politeGreeting"
          body: "*"
        };
    }
    rpc Cool(HelloRequest) returns (HelloResponse) {
            option (google.api.http) = {
              post: "/v1/example/coolGreeting"
              body: "*"
            };
    }
}
